[gd_scene load_steps=11 format=3 uid="uid://l5hjt2l7cdv6"]

[ext_resource type="Script" path="res://Character/CharacterMain.gd" id="1_57c2a"]
[ext_resource type="Script" path="res://Character/ActionObject.gd" id="2_pasrq"]
[ext_resource type="Script" path="res://Character/DetectObject.gd" id="3_6bxbn"]
[ext_resource type="PackedScene" uid="uid://c5dwbs10n2cft" path="res://Character/Health&Hunger/HealthBar3D.tscn" id="4_swnpx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ic63"]
albedo_color = Color(0.184314, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nygyd"]
material = SubResource("StandardMaterial3D_0ic63")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jxpkx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cstso"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0k5ve"]

[sub_resource type="CylinderMesh" id="CylinderMesh_r1jwc"]

[node name="CharacterMain" type="CharacterBody3D" groups=["characters"]]
script = ExtResource("1_57c2a")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_nygyd")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_jxpkx")

[node name="Navigation" type="NavigationAgent3D" parent="."]

[node name="ObjectPickUp" type="ShapeCast3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 2.1, 0)
shape = SubResource("CylinderShape3D_cstso")
script = ExtResource("2_pasrq")

[node name="ObjectDetect" type="ShapeCast3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 2.1, 0)
shape = SubResource("CylinderShape3D_cstso")
script = ExtResource("3_6bxbn")

[node name="Placeholder" type="Node3D" parent="ObjectDetect"]
transform = Transform3D(0.0666667, 0, 0, 0, 1, 0, 0, 0, 0.0666667, 6.66667, 97.9, 6.66667)

[node name="Visual" type="MeshInstance3D" parent="ObjectDetect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
material_override = SubResource("StandardMaterial3D_0k5ve")
transparency = 0.9
cast_shadow = 0
mesh = SubResource("CylinderMesh_r1jwc")
skeleton = NodePath("../..")

[node name="Tick" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="HealthBar3D" parent="." instance=ExtResource("4_swnpx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.28108, 0)

[connection signal="navigation_finished" from="Navigation" to="." method="_on_navigation_navigation_finished"]
[connection signal="timeout" from="Tick" to="." method="_on_tick_timeout"]
